--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,61 @@
-h1 {
-    color:  green;
-  }
+.inkcontrol{
+  padding-top: 15px;
+  padding-left: 15px;
+}
+
+.inkcontrol h2 {
+  text-align:center;
+ 
+  text-transform:uppercase;
+  font-size:26px; letter-spacing:1px;
+  
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 16px 0;
+  grid-gap: 22px;
+}
+
+.inkcontrol h2:after,.inkcontrol h2:before {
+  content: " ";
+  display: block;
+  border-bottom: 2px solid #cccc;
+  background-color:#f8f8f8;
+}
+.port-selection h3{
+  margin-left: 15px;
+}
+.port-button{
+  margin-top: 10px;
+  margin-left: 15px;
+}
+#port-select{
+  margin-left: 15px;
+}
+.chart{
+  padding-top: 10px;
+  padding-right: 20px;
+  width: 800px;
+  height: 400px;
+}
+.keyset h3{
+  margin-left: 15px;
+  margin-top: 35px;
+}
+.radio-group{
+  display: flex;
+  margin-top: 10px;
+}
+.radio-group label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5px; /* Adjust as needed */
+}
+
+.radio-group input[type="radio"] {
+  margin-right: 5px; /* Adjust as needed */
+}
+.start-button{
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
